# SanityLangInterpreter

./: .gitignore  README.md  SPEC.md  pyproject.toml
examples/: chaos.san  fate.san  fibonacci.san  hello.san
sanity/: __init__.py  __main__.py  ast_nodes.py  canvas.py  filehandle.py  lexer.py  main.py  parser.py  runtime.py  runtime_statements.py  sanity_points.py  stdlib.py  tokens.py  types.py  variables.py
tests/: test_integration.py  test_lexer.py  test_parser.py  test_phase11_io.py  test_phase11_remaining.py  test_programs.py  test_sanity_points.py  test_types.py  test_variables.py
