[project]
name = "sanitylang"
version = "0.1.0"
description = "(In)SanityLang Interpreter v0.1-confused"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[project.scripts]
sanity = "sanity.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sanity"]
